# kama-ui

./: README.md  pyproject.toml
src/kui/_pyinstaller_hooks/: __init__.py  hook-kui.component.py  hook-kui.py  hook-kui.resolver.py  hook-kui.style.py  hook-kui.stylesheet.py
src/kui/command/: build.py  delete.py  disable.py  enable.py  refresh.py  type.py
src/kui/component/: button.py  combobox.py  dialog.py  divider.py  label.py  layout.py  list.py  progress_button.py  spacer.py  tab_bar.py  toggle.py  wait_bar.py  widget.py
src/kui/controller/: confirmation.py  dialog.py  rebind.py  section.py  tab_bar.py
src/kui/core/: _service.py  app.py  command.py  component.py  config.py  constants.py  controller.py  discovery.py  filter.py  holder.py  json_holder.py  manager.py  metadata.py  provider.py  resolver.py  shortcut.py  startup.py  style.py  text_resource.py  transformer.py  window.py  worker.py  yaml_holder.py
src/kui/core/service/: config.py  data.py  discovery.py  provider.py  reader.py  startup.py  style.py  tr.py
src/kui/dto/: style.py  type.py
src/kui/holder/: json.py  xml.py  yaml.py
src/kui/resolver/: __init__.py  data.py  date.py  holder.py  icon.py  pixmap.py  prop.py  tr.py
src/kui/style/: color.py  font.py  image.py  type.py
src/kui/stylesheet/: button.kss  button.qss  combobox.kss  combobox.qss  confirmation.kss  confirmation.qss  divider.kss  notification.kss  notification.qss  progress_button.kss  progress_button.qss  root.kss  root.qss  scrollbar.kss  scrollbar.qss  text.kss  text.qss  toggle.kss  toggle.qss
src/kui/transformer/: tr.py  widget.py
src/kui/util/: file.py  graphics.py  thread.py
tests/: conftest.py
tests/util/: test_graphics.py
