[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kama-ui"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
version = "0.1.0"
dependencies = [
    "kama-util @ git+https://github.com/pikulo-kama/kama-util.git",
    "kama-tr @ git+https://github.com/pikulo-kama/kama-tr.git",
    "PyQt6 >= 6.10.0, < 7.0.0",
    "pyqt6-sip >= 13.10.2, < 14.0.0",
    "PyYAML >= 6.0.3, < 7.0.0"
]

[project.optional-dependencies]
test = [
    "pytest-cov >= 7.0.0, < 8.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kui.stylesheet" = ["*.qss"]

[project.entry-points."pyinstaller40.hook_registration"]
kama_ui = "kui._pyinstaller_hooks"

[tool.coverage.run]
source = ["kui"]
disable_warnings = ["module-not-measured"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=kui --cov-report=term-missing"
